--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -7,6 +7,7 @@
     <h2>New book</h2>
     <%= render 'books/form', book: @book %>
 
+    <%= render 'follow', user: @user %>
   </div>
 
   <div class='col-xs-9'>
